--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ before_install:
 - gem install bundler
 script:
 - bundle exec rails db:migrate RAILS_ENV=test
+branches:
+  only:
+    - "master"
 deploy:
   provider: heroku
   api_key:
