--- a/config/database.yml
+++ b/config/database.yml
@@ -29,15 +29,27 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: conf-manager
+  <% if ENV["dockerized"] == "true" %>
+  username: <%= ENV["DATABASE_USER_DEV"] %>
+  <% else %>
+  #username
+  <% end %>
 
   # The password associated with the postgres role (username).
-  #password:
+  <% if ENV["dockerized"] == "true" %>
+  password: <%= ENV["DATABASE_PASSWORD_DEV"].empty? || ENV["DATABASE_PASSWORD_DEV"].nil? ? "" : ENV["DATABASE_PASSWORD_DEV"] %>
+  <% else %>
+  #password
+  <% end %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  <% if ENV["dockerized"] == "true" %>
+  host: <%= ENV["DATABASE_HOST_DEV"] %>
+  <% else %>
+  #host
+  <% end %>
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
